feat(18-01): add mkdocs-redirects plugin with Phase 19 redirect_maps
- Add redirects plugin between privacy and tags (before minify for correct processing order)
- Configure empty redirect_maps with Phase 19 activation comments
- Document mkdocs-redirects and mkdocs-minify-plugin as pip dependencies
- Build succeeds with redirects plugin loaded

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,10 +19,16 @@ copyright: >
   <a href="#__consent">Change cookie settings</a>
 
 # Plugins
+# Note: mkdocs-redirects and mkdocs-minify-plugin are pip dependencies (see CI workflows)
 plugins:
   - search
   - git-revision-date-localized
   - privacy
+  - redirects:
+      redirect_maps:
+        # Redirect mappings for Phase 19 IA restructure
+        # Will be activated when pages physically move to new directories
+        # See docs/migration.md for the full URL change mapping table
   - tags
   - minify:
       minify_html: true
