feat(18-01): add mkdocs-redirects and mkdocs-minify-plugin to CI workflows
- Update ci.yaml to install both plugins in docs-test job
- Update release.yaml to install both plugins in docs-release job
- Update docs-preview.yml to install both plugins in build-preview job
- CI builds will now succeed with redirects and minify plugins configured in mkdocs.yml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -170,7 +170,9 @@ jobs:
         run: |
           pip install \
           mkdocs-material \
-          mkdocs-git-revision-date-localized-plugin
+          mkdocs-git-revision-date-localized-plugin \
+          mkdocs-redirects \
+          mkdocs-minify-plugin
 
       - name: 📄 Build documentation
         env:
