--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -104,7 +104,9 @@ jobs:
         run: |
           pip install \
           mkdocs-material \
-          mkdocs-git-revision-date-localized-plugin
+          mkdocs-git-revision-date-localized-plugin \
+          mkdocs-redirects \
+          mkdocs-minify-plugin
 
       - name: 🚀 Build documentation
         env:
