feat(19-01): restructure navigation to Divio taxonomy
- Rename "Introduction" to "Home" (standard docs convention)
- Move comparison.md from Architecture to Getting Started (evaluator path)
- Promote api_reference.md from User Guide to top-level Reference section
- Rename "User Guide" to "How-To Guides" (Divio taxonomy)
- Rename "Architecture" to "Explanation" (Divio taxonomy)
- Move security.md from Operations to Explanation
- Move metrics_and_dashboards.md from Operations to Reference
- Move faq.md from User Guide to Reference
- Dissolve Operations section (content distributed)
- Shorten "Contributing & Development" to "Contributing"
- Maintain maximum 2-level nav depth

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -209,23 +209,23 @@ markdown_extensions:
 
 # Page tree
 nav:
-  - Introduction: index.md
+  - Home: index.md
   - Getting Started:
       - Quick Start: getting_started.md
+      - Compare Alternatives: comparison.md
       - Deploy with Helm: helm_deploy.md
-  - User Guide:
-      - Features: features.md
+  - How-To Guides:
+      - Features Overview: features.md
       - Advanced Topics: advanced_topics.md
+  - Reference:
       - API Reference: api_reference.md
-      - FAQ: faq.md
-  - Architecture:
-      - How It Works: how_does_it_work.md
-      - Comparison: comparison.md
-  - Operations:
-      - Security: security.md
       - Metrics & Dashboards: metrics_and_dashboards.md
-  - Migration & Upgrade: migration.md
-  - Contributing & Development:
+      - FAQ: faq.md
+  - Explanation:
+      - How It Works: how_does_it_work.md
+      - Security: security.md
+  - Migration Guide: migration.md
+  - Contributing:
       - Overview: contribute.md
       - Integration Testing: integration-testing.md
       - Local Development: local-development.md
