feat(19-03): enable navigation tabs and path, remove GitHub edit buttons
- Add navigation.tabs for top-level section tabs
- Add navigation.path for breadcrumb trail
- Remove content.action.edit and content.action.view (no edit_uri)
- Remove edit_uri from config (docs/improve branch no longer needed)
- Remove "Documentation Structure Changes" section from migration guide (nav finalized)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,6 @@ site_description: Production-ready Kubernetes operator for Locust distributed lo
 # Repository
 repo_name: locust-k8s-operator
 repo_url: https://github.com/AbdelrhmanHamouda/locust-k8s-operator
-edit_uri: edit/docs/improve/docs/
 
 # Site URL (required for instant navigation)
 site_url: https://abdelrhmanhamouda.github.io/locust-k8s-operator/
@@ -61,9 +60,11 @@ theme:
     - search.suggest
 
     # Navigation
+    - navigation.tabs
     - navigation.instant          # SPA-like behavior (no full page reloads)
     - navigation.instant.prefetch # Predictive loading on hover
     - navigation.instant.progress # Progress bar for slow connections
+    - navigation.path
     - navigation.tracking
     - navigation.top
     - navigation.footer
@@ -83,8 +84,6 @@ theme:
 
     # Other features
     - header.autohide
-    - content.action.edit         # GitHub edit button on pages
-    - content.action.view         # GitHub view source button on pages
 
   palette:
     # Palette toggle for light mode
