--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,11 +23,6 @@ plugins:
   - search
   - git-revision-date-localized
   - privacy
-  - redirects:
-      redirect_maps:
-        # Redirect mappings for Phase 19 IA restructure
-        # getting_started.md moved to getting_started/index.md
-        getting_started.md: getting_started/index.md
   - tags
   - minify:
       minify_html: true
@@ -115,10 +110,6 @@ extra_javascript:
 
 # Customization
 extra:
-  # Version dropdown configuration
-  version:
-    provider: mike
-    default: latest
 
   # Tag configuration (optional - for tag icons)
   tags:
@@ -211,8 +202,7 @@ nav:
   - Home: index.md
   - Getting Started:
       - Quick Start: getting_started/index.md
-      - Compare Alternatives: comparison.md
-      - Deploy with Helm: helm_deploy.md
+      - Install the Operator: helm_deploy.md
   - Tutorials:
       - Overview: tutorials/index.md
       - "Your First Load Test (10 min)": tutorials/first-load-test.md
@@ -239,14 +229,14 @@ nav:
           - Configure pod security: how-to-guides/security/configure-pod-security.md
   - Reference:
       - API Reference: api_reference.md
-      - Features Overview: features.md
       - Metrics & Dashboards: metrics_and_dashboards.md
       - FAQ: faq.md
   - Explanation:
       - How It Works: how_does_it_work.md
-      - Security: security.md
-      - Advanced Topics: advanced_topics.md
-  - Migration Guide: migration.md
+      - Features Overview: features.md
+      - Compare Alternatives: comparison.md
+      - Security Model: security.md
+      - Migration from v1: migration.md
   - Contributing:
       - Overview: contribute.md
       - Integration Testing: integration-testing.md
