chore(20-06): remove mkdocs-redirects plugin from CI workflows and documentation
- Remove mkdocs-redirects from ci.yaml, docs-preview.yml, and release.yaml
- Update mkdocs.yml comment to reflect removed dependency

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ copyright: >
   <a href="#__consent">Change cookie settings</a>
 
 # Plugins
-# Note: mkdocs-redirects and mkdocs-minify-plugin are pip dependencies (see CI workflows)
+# Note: mkdocs-minify-plugin is a pip dependency (see CI workflows)
 plugins:
   - search
   - git-revision-date-localized
