--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,11 +4,13 @@
 site_name: Locust Kubernetes Operator
 site_author: Abdelrhman Hamouda
 site_description: Production-ready Kubernetes operator for Locust distributed load testing. Automate performance testing with cloud-native CI/CD integration, OpenTelemetry observability, and horizontal scaling.
-site_keywords: kubernetes, locust, operator, load testing, performance testing, distributed testing, cloud-native, k8s, helm, CI/CD
 
 # Repository
 repo_name: locust-k8s-operator
 repo_url: https://github.com/AbdelrhmanHamouda/locust-k8s-operator
+
+# Site URL (required for instant navigation)
+site_url: https://abdelrhmanhamouda.github.io/locust-k8s-operator/
 
 # Copyright
 copyright: >
@@ -16,11 +18,20 @@ copyright: >
   <a href="#__consent">Change cookie settings</a>
 
 # Plugins
+# Note: mkdocs-minify-plugin is a pip dependency (see CI workflows)
 plugins:
   - search
   - git-revision-date-localized
   - privacy
   - tags
+  - minify:
+      minify_html: true
+      minify_js: true
+      minify_css: true
+      htmlmin_opts:
+        remove_comments: true
+        remove_empty_space: true
+      cache_safe: true
 
 # Configuration
 theme:
@@ -44,6 +55,11 @@ theme:
     - search.suggest
 
     # Navigation
+    - navigation.tabs
+    - navigation.instant          # SPA-like behavior (no full page reloads)
+    - navigation.instant.prefetch # Predictive loading on hover
+    - navigation.instant.progress # Progress bar for slow connections
+    - navigation.path
     - navigation.tracking
     - navigation.top
     - navigation.footer
@@ -94,10 +110,6 @@ extra_javascript:
 
 # Customization
 extra:
-  # Version dropdown configuration
-  version:
-    provider: mike
-    default: latest
 
   # Tag configuration (optional - for tag icons)
   tags:
@@ -165,7 +177,10 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
-  - pymdownx.highlight
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.critic
   - pymdownx.inlinehilite
   - pymdownx.keys
@@ -184,23 +199,45 @@ markdown_extensions:
 
 # Page tree
 nav:
-  - Introduction: index.md
+  - Home: index.md
   - Getting Started:
-      - Quick Start: getting_started.md
-      - Deploy with Helm: helm_deploy.md
-  - User Guide:
-      - Features: features.md
-      - Advanced Topics: advanced_topics.md
+      - Quick Start: getting_started/index.md
+      - Install the Operator: helm_deploy.md
+  - Tutorials:
+      - Overview: tutorials/index.md
+      - "Your First Load Test (10 min)": tutorials/first-load-test.md
+      - "CI/CD Integration (15 min)": tutorials/ci-cd-integration.md
+      - "Production Deployment (20 min)": tutorials/production-deployment.md
+  - How-To Guides:
+      - Overview: how-to-guides/index.md
+      - Configuration:
+          - Configure resource limits: how-to-guides/configuration/configure-resources.md
+          - Use a private registry: how-to-guides/configuration/use-private-registry.md
+          - Mount volumes: how-to-guides/configuration/mount-volumes.md
+          - Configure Kafka integration: how-to-guides/configuration/configure-kafka.md
+          - Configure automatic cleanup: how-to-guides/configuration/configure-ttl.md
+      - Observability:
+          - Configure OpenTelemetry: how-to-guides/observability/configure-opentelemetry.md
+          - Monitor test status: how-to-guides/observability/monitor-test-status.md
+      - Scaling:
+          - Scale worker replicas: how-to-guides/scaling/scale-workers.md
+          - Use node affinity: how-to-guides/scaling/use-node-affinity.md
+          - Configure tolerations: how-to-guides/scaling/configure-tolerations.md
+          - Use node selector: how-to-guides/scaling/use-node-selector.md
+      - Security:
+          - Inject secrets: how-to-guides/security/inject-secrets.md
+          - Configure pod security: how-to-guides/security/configure-pod-security.md
+  - Reference:
       - API Reference: api_reference.md
-      - FAQ: faq.md
-  - Architecture:
-      - How It Works: how_does_it_work.md
-      - Comparison: comparison.md
-  - Operations:
-      - Security: security.md
       - Metrics & Dashboards: metrics_and_dashboards.md
-  - Migration & Upgrade: migration.md
-  - Contributing & Development:
+      - FAQ: faq.md
+  - Explanation:
+      - How It Works: how_does_it_work.md
+      - Features Overview: features.md
+      - Compare Alternatives: comparison.md
+      - Security Model: security.md
+      - Migration from v1: migration.md
+  - Contributing:
       - Overview: contribute.md
       - Integration Testing: integration-testing.md
       - Local Development: local-development.md
