--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -170,7 +170,8 @@ jobs:
         run: |
           pip install \
           mkdocs-material \
-          mkdocs-git-revision-date-localized-plugin
+          mkdocs-git-revision-date-localized-plugin \
+          mkdocs-minify-plugin
 
       - name: 📄 Build documentation
         env:
