--- a/.github/workflows/docs-preview.yml
+++ b/.github/workflows/docs-preview.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           pip install mkdocs-material
           pip install mkdocs-git-revision-date-localized-plugin
+          pip install mkdocs-minify-plugin
 
       - name: 🔧 Configure MkDocs for preview
         run: |
