--- a/.cz.yaml
+++ b/.cz.yaml
@@ -1,7 +1,7 @@
 ---
 commitizen:
   annotated_tag: true
-  bump_message: "bump(release): v$current_version → v$new_version"
+  bump_message: "bump(release): v$current_version \u2192 v$new_version"
   name: cz_conventional_commits
   tag_format: $major.$minor.$patch$prerelease
   update_changelog_on_bump: true
