docs: add Kind cluster validation guide to how-to guides
Add new Testing & Validation section with Kind cluster validation guide to both the how-to guides index and mkdocs navigation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -227,6 +227,8 @@ nav:
       - Security:
           - Inject secrets: how-to-guides/security/inject-secrets.md
           - Configure pod security: how-to-guides/security/configure-pod-security.md
+      - Testing & Validation:
+          - Validate with Kind: how-to-guides/validate-with-kind.md
   - Reference:
       - API Reference: api_reference.md
       - Metrics & Dashboards: metrics_and_dashboards.md
