feat(ci): add Codacy coverage reporting to CI pipeline
Add codacy-coverage-reporter-action to upload Go test coverage reports to Codacy for code quality tracking. Report runs on all job outcomes using force-coverage-parser: go.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,6 +56,14 @@ jobs:
           name: go-coverage
           fail_ci_if_error: false
 
+      - name: 📈 Report coverage to Codacy
+        if: always()
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: cover.out
+          force-coverage-parser: go
+
       - name: 📦 Upload Go test artifacts on failure
         if: failure()
         uses: actions/upload-artifact@v4
