fix(ci): remove excessive SHA tag from Docker image releases
Remove the full commit SHA tag from the release workflow's Docker image
tagging strategy. This eliminates registry pollution while maintaining
full traceability through version tags and Docker image digests.

Changes:
- Remove `,${{ github.sha }}` from ko build tags parameter
- Future releases will only create version and latest tags

Rationale:
- Version tags already provide full traceability (immutable Git tags)
- Docker images have SHA256 digests for absolute immutability needs
- SHA tags (40-char) clutter DockerHub without adding practical value
- Users prefer semantic versions for deployments and rollbacks

Introduced in: c68b6311 (Go operator CI/CD rewrite, Jan 2026)

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,7 +44,7 @@ jobs:
           ko build ./cmd \
             --platform=linux/amd64,linux/arm64 \
             --bare \
-            --tags=${{ github.ref_name }},latest,${{ github.sha }}
+            --tags=${{ github.ref_name }},latest
 
   helm-chart-release:
     name: 🌊 Publish Helm chart
