feat(helm): add Artifact Hub metadata and comprehensive chart documentation
Add Artifact Hub repository metadata file with verified publisher configuration, enhance Chart.yaml with SEO-optimized description, keywords, annotations, and documentation links, create comprehensive chart README with installation examples and migration guidance, and update release workflow to copy artifacthub-repo.yml to published site.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -115,6 +115,10 @@ jobs:
         run: |
           python -m mkdocs build
 
+      - name: 📝 Copy Artifact Hub metadata
+        run: |
+          cp artifacthub-repo.yml ./site/
+
       - name: 🚀 Deploy documentation
         uses: peaceiris/actions-gh-pages@v4
         with:
