fix(ci): update golangci-lint to support Go 1.25
Use latest version of golangci-lint instead of v2.1.0 which was
built with Go 1.24 and doesn't support Go 1.25.

This fixes the CI error:
'the Go language version (go1.24) used to build golangci-lint
is lower than the targeted Go version (1.25)'

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: 🔍 Run linter
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.1.0
+          version: latest # Use latest to support Go 1.25
 
       - name: 🛠️ Build
         run: make build
