--- a/.github/workflows/docs-preview.yml
+++ b/.github/workflows/docs-preview.yml
@@ -16,16 +16,12 @@ on:
       - master
       - main
 
-permissions:
-  contents: write  # Required to push to gh-pages branch
-  pages: write
-  id-token: write
-  pull-requests: write
-  actions: read
-
 jobs:
   # Build and deploy docs preview for opened/updated PRs
   build-preview:
+    permissions:
+      contents: write       # Push to gh-pages branch
+      pull-requests: write  # Create/update preview comment
     if: github.event.action != 'closed'
     runs-on: ubuntu-latest
     steps:
@@ -126,6 +122,9 @@ jobs:
 
   # Clean up preview when PR is closed/merged
   cleanup-preview:
+    permissions:
+      contents: write       # Push to gh-pages branch
+      pull-requests: write  # Update comment on cleanup
     if: github.event.action == 'closed'
     runs-on: ubuntu-latest
     steps:
