--- a/.github/workflows/docs-preview.yml
+++ b/.github/workflows/docs-preview.yml
@@ -22,7 +22,9 @@ jobs:
     permissions:
       contents: write       # Push to gh-pages branch
       pull-requests: write  # Create/update preview comment
-    if: github.event.action != 'closed'
+    # SECURITY: Only run on pull_request trigger (not pull_request_target) to prevent
+    # untrusted fork PRs from executing code with write permissions (RCE vulnerability)
+    if: github.event_name == 'pull_request' && github.event.action != 'closed'
     runs-on: ubuntu-latest
     steps:
       - name: 📂 Checkout PR code
